# Cartoteka

./: Dockerfile  docker-compose.yml  pyproject.toml
cards/app/: cron.py  forms.py  models.py  urls.py  views.py
cards/app/migrations/: 0001_initial.py
cards/cards/: settings.py  urls.py
cards/templates/: base.html  card.html  generate.html  main.html
