[tool.poetry]
name = "cartoteka"
version = "0.1.0"
description = ""
authors = ["Baha Dzhalalov <bahadzhalalov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
python-dotenv = "^0.21.0"
pymysql = "^1.0.2"
cryptography = "^38.0.4"
django-crontab = "^0.7.1"


[build-system]
requires = ["poetry<=1.2>"]
build-backend = "poetry.core.masonry.api"
